# fontmake-rs

./: Cargo.toml
fontbe/src/: error.rs  glyphs.rs  gvar.rs  orchestration.rs
fontc/: Cargo.toml
fontc/src/: change_detector.rs  error.rs  lib.rs  workload.rs
fontir/src/: ir.rs  variations.rs
glyphs2fontir/: Cargo.toml
glyphs2fontir/src/: source.rs
resources/testdata/glyphs3/: var_square_triangle.glyphs
