[patch.crates-io]
font-types = {git="https://github.com/googlefonts/fontations.git", branch="write-gvar"}
read-fonts = {git="https://github.com/googlefonts/fontations.git", branch="write-gvar"}
write-fonts = {git="https://github.com/googlefonts/fontations.git", branch="write-gvar"}

[workspace]

members = [
    "fontdrasil",
    "fontbe",
    "fontir",
    "glyphs-reader",
    "glyphs2fontir",
    "ufo2fontir",
    "fontc",    
]
